add swagger + openapi spec

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,8 @@ spring:
 server:
   error:
     include-stacktrace: never
+springdoc:
+  api-docs:
+    enabled: true
+  swagger-ui:
+    url: /petanque.openapi.yaml
