--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -4,12 +4,13 @@ spring:
   jpa:
     generate-ddl: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: create
     show-sql: true
   datasource:
-    url: 'jdbc:postgresql://localhost:5432/petanquedb'
-    username: petanque_usr
-    password: K-ro
+    url: jdbc:h2:mem:mydb
+    username: sa
+    password: password
+    driverClassName: org.h2.Driver
 server:
   error:
     include-stacktrace: never
