--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.ofrancome</groupId>
 	<artifactId>petanque</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>petanque</name>
 	<description>Petanque score</description>
 	<properties>
